@@ -3,6 +3,9 @@
 	* awkgram.y: Add lint check for assignment in condition to
 	if and for statements. Thanks to Jannick <thirdedition@gmx.net>
 	for the suggestion.
+	* debug.c (do_eval): Remove @eval from the symbol table if there
+	was a syntax error in the statement being evaluated. Thanks again
+	to Jannick, for the report.
 
 2020-02-01         Arnold D. Robbins     <arnold@skeeve.com>
 
